--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
             <version>1.18.24</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.lalyos</groupId>
+            <artifactId>jfiglet</artifactId>
+            <version>0.0.9</version>
+        </dependency>
     </dependencies>
-
 </project>
